--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -48,51 +48,51 @@ jobs:
           echo "${{ steps.version.outputs.version }}"
           echo "### Version: $version" >> $GITHUB_STEP_SUMMARY
 
-  # build:
-  #   runs-on: ubuntu-latest
-  #   needs:
-  #     - calc_version
-  #   env:
-  #     version: ${{ needs.calc_version.outputs.version }}
-  #   steps:
-  #   - name: Configure Signing Key
-  #     run: |
-  #       echo -n "$SIGNING_KEY" | base64 --decode | gpg --import --batch
-  #     env:
-  #       SIGNING_KEY: ${{ secrets.SIGNING_KEY_BASE64 }}
-  #   - uses: actions/checkout@v4
-  #   - name: Set up JDK 17
-  #     uses: actions/setup-java@v4
-  #     with:
-  #       java-version: '17'
-  #       distribution: 'temurin'
-  #       cache: maven
-  #       server-username: NEXUS_USERNAME
-  #       server-password: NEXUS_PASSWORD
-  #   - name: Build with Maven
-  #     run: mvn -B package
-  #   - name: Run checks
-  #     run: mvn verify
-  #   - name: Archive jars
-  #     uses: actions/upload-artifact@v4
-  #     with:
-  #       path: target/*.jar*
-  #   - name: Archive pmd
-  #     uses: actions/upload-artifact@v4
-  #     with:
-  #       name: pmd-report
-  #       path: target/site/pmd.html
-  #   - name: Archive code coverage report
-  #     uses: actions/upload-artifact@v4
-  #     with:
-  #       name: jacoco-coverage-report
-  #       path: target/site/jacoco/
-
-  deploy:
-    # if: github.ref == 'refs/heads/main'
+  build:
     runs-on: ubuntu-latest
     needs:
-      # - build
+      - calc_version
+    env:
+      version: ${{ needs.calc_version.outputs.version }}
+    steps:
+    - name: Configure Signing Key
+      run: |
+        echo -n "$SIGNING_KEY" | base64 --decode | gpg --import --batch
+      env:
+        SIGNING_KEY: ${{ secrets.SIGNING_KEY_BASE64 }}
+    - uses: actions/checkout@v4
+    - name: Set up JDK 17
+      uses: actions/setup-java@v4
+      with:
+        java-version: '17'
+        distribution: 'temurin'
+        cache: maven
+        server-username: NEXUS_USERNAME
+        server-password: NEXUS_PASSWORD
+    - name: Build with Maven
+      run: mvn -B package
+    - name: Run checks
+      run: mvn verify
+    - name: Archive jars
+      uses: actions/upload-artifact@v4
+      with:
+        path: target/*.jar*
+    - name: Archive pmd
+      uses: actions/upload-artifact@v4
+      with:
+        name: pmd-report
+        path: target/site/pmd.html
+    - name: Archive code coverage report
+      uses: actions/upload-artifact@v4
+      with:
+        name: jacoco-coverage-report
+        path: target/site/jacoco/
+
+  deploy:
+    if: github.ref == 'refs/heads/main'
+    runs-on: ubuntu-latest
+    needs:
+      - build
       - calc_version
     env:
       version: ${{ needs.calc_version.outputs.version }}
